# osrsbox-db

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.txt  CHANGELOG_items.md  CHANGELOG_monsters.md  CHANGELOG_pypi.md  CHANGELOG_repo.md  MANIFEST.in  README.md  config.py  gen_commit_log.py  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_travis.txt  setup.cfg  setup.py  validator.py
api_tools/: PrintItemMetadata.py
bestiary_db_tools/: BeastDefinition.py  BeastStats.py  MonsterDefinition.py  MonsterStats.py  ProcessBestiary.py  extract_all_monster_names.py  versioned_infoboxes.txt
builders/: infobox_cleaner.py
cache-wikia-tools/: 1_scrape_all_furnature.py  ItemDefinition.py  OSRSItems.py  ScrapeItemFromWikia.py  all_wikia_items.csv  parse_all_runelite_cache_items.py
changelog/: items.md  monsters.md  pypi.md
data/: README.md  attackable-npcs.json  dmm-only-items.json  ge-limits-names.json  invalid-items.json  item-ammo-requirements.json  item-skill-requirements.json  monsters-cache-data.json  weapon-types.json
docs/: OSRS-ItemIDS.txt  README.md  _config.yml  attackable-npcs.json  index.md  items-search.json  items-summary.json  items.csv  items_summary.json  models-summary.json  models_summary.json  npcs-summary.json  objects-summary.json  prayers-complete.json  summary.json
extraction_tools_cache/: extract_attackable_npcs.py  extract_inventory_actions.py  extract_item_inventory_actions.py  extract_items_cache_data.py  extract_model_ids.py  extract_monsters_cache_data.py  extract_summary_cache_data.py  extract_summary_model_ids.py  (+5 more)
(+49129 files in other folders)
