[tool.poetry]
name = "osrsbox"
version = "2.0.6"
description = "A complete and up-to-date database of Old School Runescape (OSRS) items, monsters and prayers accessible using a Python API."
readme="README.md"
homepage = "https://github.com/osrsbox/osrsbox-db"
repository = "https://github.com/osrsbox/osrsbox-db"
authors = ["PH01L <phoil@osrsbox.com>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.6"
dataclasses = "python_version < 3.7"

[tool.poetry.dev-dependencies]
setuptools = "^51.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
